k8s-sapp/sapp/sapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapp
  namespace: default
spec:
  strategy:
    type: Recreate
  replicas: 3
  selector:
    matchLabels:
      app: sapp
  template:
    metadata:
      labels:
        app: sapp
    spec:
      serviceAccount: sapp
      priorityClassName: critical-apps
      containers:
        - name: sapp
          image: patronix9345/sapp-app:0.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 200Mi
