k8s-sapp/sapp/sapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapp
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sapp.patronix-systems.com
spec:
  selector:
    app: sapp
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
